--- a/app/src/main/res/layout/activity_donate.xml
+++ b/app/src/main/res/layout/activity_donate.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     style="@style/background_layout"
     android:background="@drawable/om5"
-    tools:context=".activities.ContactUs">
+    tools:context=".activities.Donate">
 
     <include
         layout="@layout/custom_toolbar"
@@ -22,6 +22,8 @@
         android:background="@drawable/backcard"
         android:outlineSpotShadowColor="@color/black">
 
+
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -30,13 +32,11 @@
             style="@style/card_background">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginBottom="10dp"
                 >
-
-
 
                 <TextView
                     style="@style/text_color"
@@ -45,28 +45,25 @@
                     android:layout_marginTop="30dp"
                     android:layout_marginBottom="15dp"
                     android:fontFamily="@font/belgrano"
-                    android:text="Contact Us"
-                    android:justificationMode="inter_word"
+                    android:text="Donate to Shaastra Samvad"
+                    android:textAlignment="center"
                     android:layout_marginLeft="40px"
                     android:layout_marginRight="40px"
                     android:layout_gravity="center"
                     android:textStyle="bold"
-                    android:textSize="25sp"/>
-
-
-
+                    android:textSize="24sp"/>
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="250dp"
-                    android:layout_height="250dp"
+                    android:layout_width="240dp"
+                    android:layout_height="240dp"
                     android:layout_gravity="center"
                     app:cardCornerRadius="30dp"
                     android:layout_marginTop="20dp">
 
                     <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/logoapp"
+                        android:layout_width="245dp"
+                        android:layout_height="246dp"
+                        android:src="@drawable/qr"
                         android:id="@+id/image"/>
 
                 </androidx.cardview.widget.CardView>
@@ -83,29 +80,14 @@
                         android:layout_marginTop="30dp"
                         android:layout_marginBottom="30dp"
                         android:fontFamily="@font/belgrano"
-                        android:text="@string/contact_us"
-                        android:justificationMode="inter_word"
+                        android:text="@string/donate"
+                        android:textAlignment="center"
                         android:layout_marginLeft="40px"
                         android:layout_marginRight="40px"
                         android:layout_gravity="center"
                         android:id="@+id/first"
                         android:textStyle="normal"
                         android:textSize="15sp"/>
-
-                    <TextView
-                        android:id="@+id/display_first"
-                        style="@style/text_color"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="30dp"
-                        android:layout_marginRight="30dp"
-                        android:fontFamily="@font/belgrano"
-                        android:text="@string/email"
-                        android:layout_gravity="center"
-                        android:justificationMode="inter_word"
-                        android:textAlignment="gravity"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
 
                 </LinearLayout>
 
