--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,26 @@
     android:background="@drawable/om5">
 
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+
+    </FrameLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
+
+
 
         <include
             layout="@layout/custom_toolbar"
@@ -121,31 +135,15 @@
 
                 </LinearLayout>
 
-
-
-
-
             </androidx.cardview.widget.CardView>
 
-
-
         </LinearLayout>
-
-
-
 
         <GridView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/gridView"
             android:numColumns="2" />
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:indeterminate="true" />
 
     </LinearLayout>
 
