--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -26,8 +26,6 @@
                 android:padding="5dp"
                 android:src="@drawable/ic_baseline_menu_24" />
 
-
-
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -51,34 +49,42 @@
                     android:textColor="@color/primary_darker"
                     android:textSize="50px"
                     android:textStyle="bold" />
-
-
             </LinearLayout>
 
-
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/donate"
+                android:src="@drawable/donate"
+                android:layout_gravity="right"
+                android:layout_margin="10dp" />
         </Toolbar>
 
-        <GridView
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/gridViewmain"
-            android:numColumns="2" />
+            android:layout_height="match_parent">
+
+            <GridView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/gridViewmain"
+                android:numColumns="2" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+
+        </FrameLayout>
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:srcCompat="@tools:sample/avatars" />
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:indeterminate="true" />
-
     </LinearLayout>
-
-
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationView"
@@ -90,7 +96,6 @@
         android:background="@color/primary"
         android:backgroundTint="@color/primary"
         app:headerLayout="@layout/drawer_header"
-        android:layout_gravity="start"/>
-
+        android:layout_gravity="start" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
