--- a/app/src/main/res/layout/activity_display_info.xml
+++ b/app/src/main/res/layout/activity_display_info.xml
@@ -121,6 +121,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="30dp"
                         android:layout_marginRight="30dp"
+                        android:justificationMode="inter_word"
                         android:fontFamily="@font/belgrano"
                         android:text=""
                         android:textSize="15sp"
@@ -131,7 +132,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <TextView
                         style="@style/text_color"
@@ -153,16 +154,19 @@
                         android:textStyle="normal"
                         android:textSize="15sp"
                         style="@style/text_color"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginRight="30dp"
+                        android:justificationMode="inter_word"
                         android:fontFamily="@font/belgrano"
-                        android:layout_marginTop="30dp"
-                        android:layout_marginLeft="3dp"/>
+
+                        />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <TextView
                         style="@style/text_color"
@@ -183,10 +187,11 @@
                         android:text=""
                         android:textStyle="normal"
                         android:textSize="15sp"
+                        android:justificationMode="inter_word"
                         style="@style/text_color"
                         android:fontFamily="@font/belgrano"
-                        android:layout_marginTop="30dp"
-                        android:layout_marginLeft="3dp"/>
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginRight="30dp"/>
 
                 </LinearLayout>
 
