--- a/app/src/main/res/layout/activity_donate.xml
+++ b/app/src/main/res/layout/activity_donate.xml
@@ -61,10 +61,12 @@
                     android:layout_marginTop="20dp">
 
                     <ImageView
-                        android:layout_width="245dp"
-                        android:layout_height="246dp"
-                        android:src="@drawable/qr"
-                        android:id="@+id/image"/>
+                        android:id="@+id/image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/qr" />
 
                 </androidx.cardview.widget.CardView>
 
